# botorch

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_GUIDE.md  FidelityAwareModel_qKG.ipynb  LICENSE  MANIFEST.in  README.md  SECURITY.md  botorch_base.yml  environment.yml  index.html  meta.yaml  pyproject.toml  requirements-fmt.txt  requirements.txt  run_profiling.py  setup.cfg  setup.py  sitemap.xml  versions.html
.circleci/: config.yml
.conda/: build_conda.sh  meta.yaml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.pyre/: pyre.stderr
_sphinx-sources/: sampling.rst.txt  settings.rst.txt  utils.rst.txt
api/: acquisition.html  cross_validation.html  distributions.html  exceptions.html  fit.html  gen.html  generation.html  genindex.html  index.html  logging.html  models.html  optim.html  posteriors.html  py-modindex.html  sampling.html  search.html  settings.html  test_functions.html  utils.html
botorch/: __init__.py  cross_validation.py  exceptions.py  fit.py  gen.py  logging.py  profiling.py  settings.py  transpile_demo.ipynb  utils.py
botorch_community/: README.md
community_notebooks/: README.md  example.ipynb
css/: main.css
docs/: README.html  README.md  acquisition.html  acquisition.md  advanced_use.md  api_reference.md  basic_concepts.md  batching.html  batching.md  botorch_and_ax.html  botorch_and_ax.md  constraints.html  constraints.md  contributing.md  design_philosophy.html  design_philosophy.md  examples.md  getting_started.html  getting_started.md  getting_started.mdx  installation.md  introduction.html  introduction.md  learning_to_walk.md  models.html  models.md  more_on_batching.md  mtmo_models.md  multi_objective.html  multi_objective.md  multi_x_models.md  objectives.html  objectives.md  optimization.html  (+11 more)
(+13525 files in other folders)
